--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <div class="page-1">
         <button class="continuous-1" id="cuisine">Cuisine</button>
-        <button class="continuous-1">Dessert</button>
+        <button class="continuous-1" id="dessert">Dessert</button>
         <button class="continuous-1">Home</button>
         <button class ="continuous-1" id="favoritehome">Favorite</button>
       </div>
